/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";
import "dolittle/application/client_info.proto";

package dolittle.runtime.application;

option csharp_namespace = "Dolittle.Runtime.Application.Grpc";

message ConnectionResult {
    string Status = 1;
}

message DisconnectedResult {
}


// Represents the Client service
service Client {
    rpc Connect(ClientInfo) returns(ConnectionResult) {}
    rpc Disconnect(guid) returns(DisconnectedResult) {}
}